objects/SWSDeliveryTimings__mdt.object
<CustomObject>
    <fields>
        <fullName>CustomWork__c</fullName>
        <label>Custom Work</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardPlusaddon__c</fullName>
        <label>Standard Plus add on</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StandardRequest__c</fullName>
        <label>Standard Request</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>SWS Delivery Timings</label>
    <pluralLabel>SWS Delivery Timings</pluralLabel>
</CustomObject>